--------- v3.2.2 ---------

= Fixed a bug with resetting a round in Golf (introduced in v3.2.1)
= Fixed a bug which made it possible to select the same player multiple times in reporting setup

--------- v3.2.1 ---------

+ Granular achievement leaderboards to show who's winning on each achievement
+ 2 Achievements (BTBF, Like Clockwork)
+ Hit rate stats for Round the Clock
= Fixed bugs with deleting games caused by move to GUIDs
= Fixed a bug where the game could freeze if you paused an AI at the end of their turn
= Fixed a bug where loaded matches could still cause duplicate MatchOrdinals
= Performance improvement: Grouped dart inserts rather than individual
= Performance improvement: Improved Leaderboard SQL for Top X01 Finishes
= Performance improvement: New index on Round table
= 65.7% Kotlin
= 27.3% test coverage (3816 / 13,976 lines covered by 390 tests)

--------- v3.2.0 ---------

+ Checkout suggestions in X01
= Fixed a bug where screen title wasn't set for new matches
= Performance improvement: Match stats refresh in the background
= Performance improvement: Use GUIDs for RowIds to eliminate synchronization
= 52.3% Kotlin
= 15.75% test coverage (2245 / 14,248 lines covered by 148 tests)

--------- v3.1.1 ---------

= Made it possible to run a game report across different game modes
= Fixed a bug where 2 player matches could screw up play order when reloaded
= Shanghai achievement now breaks down on click to show all examples
= 36.4% Kotlin
= 7% test coverage (1009 / 14,370 lines covered by 80 tests)

--------- v3.1.0 ---------

+ Achievements leaderboard in Overall Stats
+ Most hit darts in X01 game stats
+ Bed & Breakfast, bad luck animations
+ 3 achievements (Hotel Inspector, Such Bad Luck, Shanghai)
= Tweaked orange colour so it's easier to differentiate from yellow
= Miss animations will no longer display when throwing at doubles in X01
= Replaced blank rows with grid lines for game stats to make more space