@@ -1,5 +1,6 @@
 --------- v3.2.2 ---------
 
++ Ability to play single games with only 1 player (for practice)
 = Fixed a bug with resetting a round in Golf (introduced in v3.2.1)
 = Fixed a bug which made it possible to select the same player multiple times in reporting setup
 
